# serializer version: 1
# name: TestPasswordResetVerify.test_gadget_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'gadget': list([
        'john@whimo.com',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestPasswordResetVerify.test_invalid_code
  dict({
    'code': 'otp.invalid_code',
    'message': 'Bad Request',
    'success': False,
  })
# ---
# name: TestPasswordResetVerify.test_mock_otp
  dict({
    'message': 'Password reset',
    'success': True,
  })
# ---
# name: TestPasswordResetVerify.test_no_code_in_cache
  dict({
    'code': 'otp.invalid_code',
    'message': 'Bad Request',
    'success': False,
  })
# ---
# name: TestPasswordResetVerify.test_success
  dict({
    'message': 'Password reset',
    'success': True,
  })
# ---
